2008-09-04 08:00-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Remove unhide: implementation.  Correction for bug#24146.

2008-08-24 13:20-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomView.m
	* GormCore/GormDocument.m
	* GormCore/GormViewWindow.m: Fixing handling of standalone views.

2008-07-20 09:32-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormObjCHeaderParser/OCIVar.m
	* GormObjCHeaderParser/ParserFunctions.h
	* GormObjCHeaderParser/ParserFunctions.m: Correction for 
	bug #23889.

2008-06-24 19:18-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormWrapperBuilder.h
	* GormCore/GormWrapperBuilder.m
	* GormCore/GormWrapperLoader.h
	* GormCore/GormWrapperLoader.m
	* Plugins/GModel/GormGModelPlugin.m
	* Plugins/GModel/GormGModelWrapperLoader.h
	* Plugins/GModel/GormGModelWrapperLoader.m
	* Plugins/Gorm/GormGormPlugin.m
	* Plugins/Gorm/GormGormWrapperBuilder.m
	* Plugins/Gorm/GormGormWrapperLoader.m
	* Plugins/Nib/GormNibPlugin.m
	* Plugins/Nib/GormNibWrapperBuilder.m
	* Plugins/Nib/GormNibWrapperLoader.m: Change method name from "type"
	to "fileType" to avoid issues with gcc < 3.0

2008-06-24 18:09-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormWrapperLoader.h
	* Plugins/Gorm/GormGormWrapperLoader.h
	* Plugins/Nib/GormNibPlugin.m: Call type from here.
	* Plugins/Nib/GormNibWrapperLoader.h: Move type method to super-class
	declaration.

2008-05-25 09:09-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormObjectEditor.m: Correction for segfault.
	* Plugins/Nib/GormNibPlugin.m: Correction for compilation error
	on gcc < 3.1 systems.

2008-05-20  fabien  <fabien@sonappart.net>

	* GormCore/GormObjectEditor.m: add draggingExited: to implement 
	autoscrolling during IBAction connections. 

2008-05-18 19:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Correct segfault.  Remove unecessary